// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-indépendant > Année incomplète 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: 2757
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: undefined"
`;

exports[`calculate simulations-indépendant > Année incomplète 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 3625
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1247
indépendant . cotisations et contributions . début activité: 2757
indépendant . revenu professionnel: 2078
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000
indépendant . rémunération . totale: 3625"
`;

exports[`calculate simulations-indépendant > Année incomplète 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 7072
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1446
indépendant . cotisations et contributions . début activité: 2757
indépendant . revenu professionnel: 5152
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
indépendant . rémunération . totale: 7072"
`;

exports[`calculate simulations-indépendant > Année incomplète 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 13843
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2731
indépendant . cotisations et contributions . début activité: 2757
indépendant . revenu professionnel: 10297
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 13843"
`;

exports[`calculate simulations-indépendant > Année incomplète 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 133365
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 23674
indépendant . cotisations et contributions . début activité: 2757
indépendant . revenu professionnel: 102862
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73882
indépendant . rémunération . totale: 133365"
`;

exports[`calculate simulations-indépendant > Année incomplète 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1259469
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 143122
indépendant . cotisations et contributions . début activité: 2757
indépendant . revenu professionnel: 1034749
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 528740
indépendant . rémunération . totale: 1259469"
`;

exports[`calculate simulations-indépendant > DROM 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 20000

Notifications affichées : indépendant . cotisations et contributions . cotisations . exonérations . DROM"
`;

exports[`calculate simulations-indépendant > acre 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 71801
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 16529
indépendant . cotisations et contributions . début activité: 1609
indépendant . revenu professionnel: 51541
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41372
indépendant . rémunération . totale: 71801"
`;

exports[`calculate simulations-indépendant > activité 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 27535
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 5440
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 20591
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 19436
indépendant . rémunération . totale: 27535"
`;

exports[`calculate simulations-indépendant > activité 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 27565
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 5449
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 20592
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 19436
indépendant . rémunération . totale: 27565"
`;

exports[`calculate simulations-indépendant > années précédentes 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 87270
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 87270"
`;

exports[`calculate simulations-indépendant > années précédentes 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 72919
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 72919"
`;

exports[`calculate simulations-indépendant > années précédentes 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 58718
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: 40000
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 58718"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 77682
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 17762
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51667
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41334
indépendant . rémunération . totale: 77682"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 79076
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 18065
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51697
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41325
indépendant . rémunération . totale: 79076"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 83255
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 19001
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51787
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41298
indépendant . rémunération . totale: 83255"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 73756
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 13468
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51583
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41360
indépendant . rémunération . totale: 73756"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 73755
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 11098
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51583
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41360
indépendant . rémunération . totale: 73755"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 669667
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 85854
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 517645
indépendant . rémunération . nette: 500000
indépendant . rémunération . nette . après impôt: 282121
indépendant . rémunération . totale: 669667"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 30000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 30000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 30000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 20000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 300000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 300000"
`;

exports[`calculate simulations-indépendant > cotisations forfaitaires début d'activité 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: 3403
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 50000"
`;

exports[`calculate simulations-indépendant > cotisations minimales 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1431
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1155
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 117
indépendant . rémunération . nette: 100
indépendant . rémunération . nette . après impôt: 100
indépendant . rémunération . totale: 1431"
`;

exports[`calculate simulations-indépendant > cotisations minimales 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 218
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 0
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 100
indépendant . rémunération . nette: 100
indépendant . rémunération . nette . après impôt: 100
indépendant . rémunération . totale: 218"
`;

exports[`calculate simulations-indépendant > cotisations minimales 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 970
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 38
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 804
indépendant . rémunération . nette: 800
indépendant . rémunération . nette . après impôt: 800
indépendant . rémunération . totale: 970"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 45000"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 9000"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: 984
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 10000"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 15000"
`;

exports[`calculate simulations-indépendant > exonération âge 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 55000"
`;

exports[`calculate simulations-indépendant > imposition à l'IR 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 100000
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 21867
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 72983
indépendant . rémunération . nette: 70837
indépendant . rémunération . nette . après impôt: 55777
indépendant . rémunération . totale: 100000"
`;

exports[`calculate simulations-indépendant > impôt sur le revenu 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 27535
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 5440
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 20591
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 17941
indépendant . rémunération . totale: 27535"
`;

exports[`calculate simulations-indépendant > inversions IR 1`] = `
"entreprise . charges: 1000
entreprise . chiffre d'affaires: 20000
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 3757
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 14169
indépendant . rémunération . nette: 13761
indépendant . rémunération . nette . après impôt: 13761
indépendant . rémunération . totale: 19000"
`;

exports[`calculate simulations-indépendant > inversions IR 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 13886
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2771
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10298
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 13886"
`;

exports[`calculate simulations-indépendant > inversions IR 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 61272
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 14527
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 43543
indépendant . rémunération . nette: 42229
indépendant . rémunération . nette . après impôt: 36000
indépendant . rémunération . totale: 61272"
`;

exports[`calculate simulations-indépendant > inversions IS 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 13886
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2771
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10298
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 13886"
`;

exports[`calculate simulations-indépendant > inversions IS 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 13886
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2771
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10298
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 13886"
`;

exports[`calculate simulations-indépendant > échelle de revenus 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1912
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1189
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 531
indépendant . rémunération . nette: 500
indépendant . rémunération . nette . après impôt: 500
indépendant . rémunération . totale: 1912"
`;

exports[`calculate simulations-indépendant > échelle de revenus 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 2513
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1231
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1049
indépendant . rémunération . nette: 1000
indépendant . rémunération . nette . après impôt: 1000
indépendant . rémunération . totale: 2513"
`;

exports[`calculate simulations-indépendant > échelle de revenus 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 3112
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1273
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1566
indépendant . rémunération . nette: 1500
indépendant . rémunération . nette . après impôt: 1500
indépendant . rémunération . totale: 3112"
`;

exports[`calculate simulations-indépendant > échelle de revenus 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 3687
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1304
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 2079
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000
indépendant . rémunération . totale: 3687"
`;

exports[`calculate simulations-indépendant > échelle de revenus 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 7110
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1481
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 5153
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
indépendant . rémunération . totale: 7110"
`;

exports[`calculate simulations-indépendant > échelle de revenus 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 13886
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2771
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10298
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 13886"
`;

exports[`calculate simulations-indépendant > échelle de revenus 7`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 136819
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 26880
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 102936
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73851
indépendant . rémunération . totale: 136819"
`;

exports[`calculate simulations-indépendant > échelle de revenus 8`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1263080
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 146382
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1034854
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 528688
indépendant . rémunération . totale: 1263080"
`;
